--- a/PSFits.csproj
+++ b/PSFits.csproj
@@ -5,6 +5,13 @@
     <AssemblyName>PSFits</AssemblyName>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Version)' == '' ">
+	<VersionPrefix Condition=" '$(VersionPrefix)' == '' ">1.0.0</VersionPrefix>
+	<Version Condition=" '$(VersionSuffix)' != '' And $(VersionSuffix[0]) != '+'">$(VersionPrefix)-$(VersionSuffix)</Version>
+	<Version Condition=" '$(VersionSuffix)' != '' And $(VersionSuffix[0]) == '+'">$(VersionPrefix)$(VersionSuffix)</Version>
+	<Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="NETStdFITS" Version="2.16.1" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-preview-06">
