Use correct version

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,9 @@ on:
     
 env:
   PS_MODULE_NAME: PSFits
-  PKG_VERSION: 1.1.${{ github.run_number }}${{ github.run_attempt }}
+  VERSION_PREFIX: 1.2.${{ github.run_number }}
+  VERSION_REV: ${{ github.run_attempt }}
+  VERSION_SUFFIX: +${{ github.sha }}
   BUILD_CONF: Release
 
 jobs:
@@ -25,7 +27,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build -c $BUILD_CONF --no-restore --version-suffix +${{ github.sha }} -p:VersionPrefix=$PKG_VERSION -p:FileVersion=${PKG_VERSION}.0
+      run: dotnet build -c $BUILD_CONF --no-restore --version-suffix $VERSION_SUFFIX -p:VersionPrefix=${VERSION_PREFIX}${VERSION_REV} -p:FileVersion=${VERSION_PREFIX}.${VERSION_REV}
     - name: Publish
       run: dotnet publish -c $BUILD_CONF --no-build 
     - name: Upload Artifact
@@ -48,7 +50,7 @@ jobs:
       run: mv bin/$BUILD_CONF/*/publish $PS_MODULE_NAME
     - name: Publish to PowerShell gallery
       run: |
-        $version = [version]"$($ENV:PKG_VERSION).0"
+        $version = [version]"$($ENV:VERSION_PREFIX).$($ENV:VERSION_REV)"
         Update-ModuleManifest -Path $ENV:PS_MODULE_NAME/$($ENV:PS_MODULE_NAME).psd1 -ModuleVersion $version
         Publish-Module -Path $ENV:PS_MODULE_NAME -NuGetApiKey ${{ secrets.NUGET_API_KEY }} -Verbose 
       shell: pwsh
