--- a/PSFits/PSFits.csproj
+++ b/PSFits/PSFits.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="NETStdFITS" Version="2.20.231" />
-    <PackageReference Include="PowerShellStandard.Library" Version="5.1.1">
+    <PackageReference Include="PowerShellStandard.Library" Version="7.0.0-preview.1">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
